--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,18 @@ body {
     line-height: 1.5;
 }
 
+.dark .logo#Dark-BYUI-Logo {
+    display: block;
+}
+
+.dark .logo#BYUI-Logo {
+    display: none;
+}
+
+body.dark {
+    background-color: #333;
+    color: white;
+}
 
 .content {
     max-width: 600px; 
@@ -30,6 +42,9 @@ header.title h2 {
     color: #006EB6;
 }
 
+body.dark header.title h2 {
+    color: #4DA9E5;
+}
 
 p {
     text-align: left; 
