--- a/coolpics.css
+++ b/coolpics.css
@@ -83,13 +83,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-links {
-    display: flex;
-    justify-content: center;
+    display: none;
     list-style-type: none;
     padding: 0;
     margin-top: 10px;
-    flex-direction: column;
     gap: 10px;
+}
+
+.nav-links.show {
+    display: flex;
+    flex-direction: column;
 }
 
 figure {
@@ -102,12 +105,47 @@ figure {
     border-radius: 8px;
 }
 
+.hide {
+    display: none;
+}
+
 
 figcaption {
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 10px;
     color: #333
+}
+
+.viewer {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+    display: grid;
+    place-items: center;
+    z-index: 10;
+}
+
+.close-viewer {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 30px;
+    color:white;
+    background: none;
+    border: none;
+    cursor: pointer;
+    z-index: 11;
+}
+
+#modal-img {
+    max-width: 90%;
+    max-height: 90%;
+    object-fit: contain;
 }
 
 @media (min-width: 700px) {
